# SeebeckCoeff

./: .gitignore  LICENSE  pyproject.toml
