[tool.poetry]
name = "random-quote-generator"
version = "0.1.0"
description = ""
authors = ["Boris N <borisnijikovsky@gmail.com>"]
readme = "README.md"
packages = [{include = "random_quote_generator"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
